# nearlab_utils

./: CMakeLists.txt  package.xml
include/: attitudePropagator.h  orbitPropagator.h  orbitalParams.h  params.h  quatMath.h  rungeKutta.h
src/: attitudePropagator.cpp  orbitPropagator.cpp  quatMath.cpp  rungeKutta.cpp
